syntax = "proto3";

package rivet.backend.pkg.mm.lobby_history;

import "proto/common.proto";

message Request {
	rivet.common.Uuid namespace_id = 1;
	int64 before_create_ts = 2;
	uint64 count = 3;
}

message Response {
	repeated rivet.common.Uuid lobby_ids = 1;
}

